--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,14 @@
         </activity>
         <activity
             android:name=".CategoryGrid"
-            android:label="@string/app_name" ></activity>
+            android:label="@string/app_name" >
+
+        </activity>
         <activity android:name=".PaymentActivity"
             android:label="@string/app_name" ></activity>
+        <activity android:name=".CardActivity"
+            android:label="@string/app_name" ></activity>
+
     </application>
 
 </manifest>
